# AI-Real-Estate-Agent

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
models/: pipeline.joblib  training_stats.json
routers/: chat.py  config.py  llm.py  ml_model.py  prompts.py  schemas.py  security.py
ui/: app.py
